2012-01-19  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_agents.php
	  operation/agentes/estado_monitores.php: Counter modified to ignore
	disabled modules.

2012-01-12  Junichi Satoh  <junichi@rworks.jp>

	* godmode/admin_access_logs.php: Merged from trunk. Fixed user
	filtering does not work.

2012-01-12  Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk. Added new
	functions set_create_snmp_module, set_create_data_module,
	set_create_plugin_module and set_create_alert_template in the API.

2012-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	* include/functions_api.php: Added new serialized parameter in 
	set_create_network_module function from api. Without it Web console 
	interface module edit view crash.

	* Bugfix from trunk

2012-01-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_forecast.php
	 include/functions_reporting.php: Fixed graphical representation of
	 intervals in projection graphs.

2012-01-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.postgreSQL.sql
	 pandoradb.data.postgreSQL.sql: Fixes queries in these scripts.

2011-12-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor.php: Fixe module editor when the
	data configuration textarea is empty or is a module plugin
	Merged from trunk

2011-12-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php
	include/functions_custom_graphs.php: Fixed combined graphs bug and
	improved presentation merged from trunk

2011-12-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/search_alerts.php: Added semicolon at end of a line.
	
	Merged bugfix from trunk.

2011-12-21  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/status_monitor.php: Merged from trunk. Fixed that